--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "@mui/styled-engine-sc": "^5.6.1",
     "axios": "^0.26.1",
     "cra-template": "1.1.3",
-    "file-saver": "^2.0.5",
     "flickr-sdk": "^6.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-shimmer": "^3.2.0",
-    "styled-components": "^5.3.5",
-    "xml-js": "^1.6.11"
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
